# PALLAS_Collimateurs_Simulation

./: .gitignore  CMakeLists.txt  History.md  PALLAS_CollSim.cc  PALLAS_Collimateurs_Simulation.code-workspace  README.md
Resultats/: a.root
gdml_models/S4/: Chambre_Dipole.gdml  Diags_Chamber.gdml
include/: Geometry.hh  PALLAS_CollSimActionInitialization.hh  PALLAS_CollSimEventAction.hh  PALLAS_CollSimGeometry.hh  PALLAS_CollSimGeometryConstruction.hh  PALLAS_CollSimMagneticField.hh  PALLAS_CollSimMaterials.hh  PALLAS_CollSimMessenger.hh  PALLAS_CollSimPhysics.hh  PALLAS_CollSimPrimaryGeneratorAction.hh  PALLAS_CollSimRunAction.hh  PALLAS_CollSimSteppingAction.hh  PALLAS_CollSimTrackInformation.hh  PALLAS_CollSimTrackingAction.hh  ParticleData.hh  ParticleData.hh~
src/: Geometry.cc  PALLAS_CollSimActionInitialization.cc  PALLAS_CollSimEventAction.cc  PALLAS_CollSimGeometry.cc  PALLAS_CollSimGeometryConstruction.cc  PALLAS_CollSimMagneticField.cc  PALLAS_CollSimMaterials.cc  PALLAS_CollSimMessenger.cc  PALLAS_CollSimPhysics.cc  PALLAS_CollSimPrimaryGeneratorAction.cc  PALLAS_CollSimRunAction.cc  PALLAS_CollSimSteppingAction.cc  PALLAS_CollSimTrackInformation.cc  PALLAS_CollSimTrackingAction.cc  PALLAS_CollSimVisManager.cc
